# FaceTrackingDemo

./: README.md
FaceTrackingDemo/: settings.gradle
FaceTrackingDemo/app/: build.gradle
FaceTrackingDemo/app/src/androidTest/java/com/itzxx/facetrackingdemo/: ExampleInstrumentedTest.java
FaceTrackingDemo/app/src/main/: AndroidManifest.xml
FaceTrackingDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FaceTrackingDemo/app/src/main/cpp/include/: DetectionBasedTracker_jni.h
FaceTrackingDemo/app/src/main/java/com/itzxx/facetrackingdemo/: CameraHelper.java  MainActivity.java  OpencvNativeJni.java  Utils.java
FaceTrackingDemo/app/src/main/res/layout/: activity_main.xml
FaceTrackingDemo/app/src/main/res/values/: strings.xml
FaceTrackingDemo/app/src/test/java/com/itzxx/facetrackingdemo/: ExampleUnitTest.java
FaceTrackingDemo/gradle/wrapper/: gradle-wrapper.properties
